[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RandomBooleanCircuits_FaulknerRainford"
version = "0.0.1"
authors = [
  { name="Penn Faulkner Rainford", email="penn.rainford@york.ac.uk" },
]
description = "A small package to produce random boolean circuits"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GLP v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/faulknerrainford/RandomBooleanCircuits"
"Bug Tracker" = "https://github.com/faulnerrainford/RandomBooleanCircuits/issues"