[tool.poetry]
name = "randombooleancircuits"
version = "0.0.1"
description = "Project for the modification and evolution of random boolean circuits as a proxy for plasmid circuits"
authors = ["Penn Faulkner Rainford <penn.rainford@york.ac.uk>"]
license = "GLP v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
pandas = "^1.5.2"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.0"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
